RESOLVED FIXED314858
REGRESSION(313178@main): declaration of 'id' must be imported from module 'wtf.Core.Forward' before it is required
https://bugs.webkit.org/show_bug.cgi?id=314858
Summary REGRESSION(313178@main): declaration of 'id' must be imported from module 'wt...
Jonathan Bedard
Reported 2026-05-14 16:21:19 PDT
declaration of 'id' must be imported from module 'wtf.Core.Forward' before it is required
Attachments
Jonathan Bedard
Comment 1 2026-05-14 16:21:20 PDT
Jonathan Bedard
Comment 2 2026-05-14 16:22:17 PDT
EWS
Comment 3 2026-05-14 16:28:31 PDT
Committed 313280@main (286cd2780073): <https://commits.webkit.org/313280@main> Reviewed commits have been landed. Closing PR #64962 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.