REGRESSION(313178@main): declaration of 'id' must be imported from module 'wtf.Core.Forward' before it is required https://bugs.webkit.org/show_bug.cgi?id=314858 rdar://177113356

Unreviewed build fix.

* Source/WTF/wtf/cocoa/NSTypeTraits.h:

Canonical link: https://commits.webkit.org/313280@main